Fixing view-buttons distortion

--- a/app/assets/stylesheets/modules/_uploads.styl
+++ b/app/assets/stylesheets/modules/_uploads.styl
@@ -90,16 +90,27 @@
     .info
       text-align left
 
-.view-buttons
-  position absolute
-  top 20px
-  right 80px
+@media (min-width: 721px)
+  .view-buttons
+    position absolute
+    top 20px
+    right 80px
 
-  button
-    padding 0
-    width 40px
-    height 40px
-    border-radius 50%
+    button
+      padding 0
+      width 40px
+      height 40px
+      border-radius 50%
+
+@media (max-width: 720px)
+  .view-buttons
+    width 100%
+
+    button
+      padding 0
+      width 40px
+      height 40px
+      border-radius 50%
 
 #uploads .Select
   width 33%
